--- a/portFolioProject/css/portFolio.css
+++ b/portFolioProject/css/portFolio.css
@@ -7,7 +7,7 @@ body {
     height: 100%;
     font-family: 'Special Elite', cursive;
     background-color: transparent;
-    background: url(/img/blackandwhitestripes4khdabstract-3840x2160.jpg);
+    background: url(./img/blackandwhitestripes4khdabstract-3840x2160.jpg);
     color: #ddd;;
 }
 
