--- a/BaseApparelComingSoonMaster/css/mainCss.css
+++ b/BaseApparelComingSoonMaster/css/mainCss.css
@@ -14,7 +14,7 @@
 .innerDivOne {
     height: inherit;
     width: 1097px;
-    background-image: url(images/bg-pattern-desktop.svg);
+    background-image: url(../images/bg-pattern-desktop.svg);
 }
 
 .innerDiv img {
